--- a/package.json
+++ b/package.json
@@ -1,78 +1,44 @@
 {
-    "license": "ISC",
-    "name": "services",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "build": "rm -rf .next && next build",
-        "dev": "next dev",
-        "prettier": "prettier  --write **/*.{ts,tsx,js}",
-        "lint:ts": "npm run prettier && eslint --fix 'src/**/*.{ts,tsx}'",
-        "lint:scss": "stylelint --fix 'src/**/*.scss'",
-        "lint:types": "tsc -p . --noEmit"
-    },
-    "keywords": [
-        "nextjs"
-    ],
-    "husky": {
-        "hooks": {
-            "pre-commit": "lint-staged && npm run lint:types",
-            "pre-push": "npm run test",
-            "post-merge": "sh hooks/post-merge.sh",
-            "post-rewrite": "sh hooks/post-merge.sh"
-        }
-    },
+    "name": "client",
+    "version": "0.1.0",
+    "private": true,
     "dependencies": {
-        "next": "12.0.7",
-        "next-redux-wrapper": "7.0.5",
-        "react": "17.0.2",
-        "react-dom": "17.0.2",
-        "react-redux": "7.2.6",
-        "react-slick": "^0.28.1",
-        "redux": "4.1.2",
-        "redux-devtools-extension": "2.13.9",
-        "redux-thunk": "2.4.1",
-        "svg-sprite-loader": "6.0.8"
+        "@material-ui/core": "^4.12.3",
+        "@material-ui/icons": "^4.11.2",
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "@types/node": "^17.0.21",
+        "@types/react-router-dom": "^5.3.3",
+        "axios": "^0.23.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^5.3.0",
+        "react-scripts": "4.0.3",
+        "styled-components": "^5.3.1",
+        "typescript": "^4.5.4",
+        "web-vitals": "^1.0.1"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     },
     "devDependencies": {
-        "@types/react-slick": "^0.23.8",
-        "@babel/core": "7.9.0",
-        "@testing-library/jest-dom": "5.11.8",
-        "@testing-library/react": "11.2.2",
-        "@types/jest": "25.1.4",
-        "@types/node": "13.9.5",
-        "@types/react": "16.9.27",
-        "@types/react-redux": "7.1.7",
-        "@types/svg-sprite-loader": "3.9.3",
-        "@typescript-eslint/eslint-plugin": "5.6.0",
-        "@typescript-eslint/parser": "5.6.0",
-        "acorn": "7.1.1",
-        "babel-core": "6.26.3",
-        "babel-jest": "25.2.4",
-        "babel-loader": "8.1.0",
-        "babel-plugin-module-resolver": "4.0.0",
-        "eslint": "7.17.0",
-        "eslint-config-prettier": "7.1.0",
-        "eslint-plugin-jsx-a11y": "6.4.1",
-        "eslint-plugin-prettier": "3.3.0",
-        "eslint-plugin-react": "7.22.0",
-        "eslint-plugin-react-hooks": "4.2.0",
-        "husky": "4.2.3",
-        "identity-obj-proxy": "3.0.0",
-        "jest": "27.4.4",
-        "jest-transform-stub": "2.0.0",
-        "lint-staged": "10.1.0",
-        "postcss-preset-env": "6.7.0",
-        "postcss-scss": "4.0.2",
-        "prettier": "2.0.2",
-        "sass": "1.44.0",
-        "stylelint": "14.1.0",
-        "stylelint-config-prettier": "9.0.3",
-        "stylelint-config-recommended": "6.0.0",
-        "stylelint-scss": "4.0.1",
-        "svgo": "1.3.2",
-        "svgo-loader": "2.2.1",
-        "typescript": "4.3.4"
+        "@types/react-dom": "^17.0.13",
+        "@types/styled-components": "^5.1.18"
     }
 }
